# dissect.vmfs

./: .git-blame-ignore-revs  COPYRIGHT  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
dissect/vmfs/: __init__.py  address.py  c_lvm.py  c_lvm.pyi  c_vmfs.py  c_vmfs.pyi  descriptor.py  exception.py  exceptions.py  lvm.py  resource.py  util.py  vmfs.py
tests/: conftest.py  test_address.py  test_exception.py  test_exceptions.py  test_lvm.py  test_vmfs.py
