[build-system]
requires = ["setuptools>=65.5.0", "setuptools_scm[toml]>=6.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dissect.vmfs"
description = "A Dissect module implementing a parser for the VMFS file system, used by VMware virtualization software"
readme = "README.md"
requires-python = "~=3.9"
license.text = "Affero General Public License v3"
authors = [
  {name = "Dissect Team", email = "dissect@fox-it.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
]
dependencies = [
    "dissect.cstruct>=3.0.dev,<4.0.dev",
    "dissect.util>=3.0.dev,<4.0.dev",
]
dynamic = ["version"]

[project.urls]
homepage = "https://dissect.tools"
documentation = "https://docs.dissect.tools/en/latest/projects/dissect.vmfs"
repository = "https://github.com/fox-it/dissect.vmfs"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
known_first_party = ["dissect.vmfs"]
known_third_party = ["dissect"]

[tool.setuptools]
license-files = ["LICENSE", "COPYRIGHT"]

[tool.setuptools.packages.find]
include = ["dissect.*"]

[tool.setuptools_scm]
